bk_ida/gccida/c2/subst_constants
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2944:6: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx *v13; // rbp 
     ^~~
     v12
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2943:15: note: 'v12' declared here
unsigned int *v12; // rax 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2944:5: error: invalid operands to binary expression ('struct rtx_def *' and 'unsigned int *')
rtx *v13; // rbp 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2946:4: error: expected ';' after expression
rtx v15; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2946:5: error: use of undeclared identifier 'v15'
rtx v15; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2953:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2953:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2954:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2954:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2967:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v36; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2968:4: error: expected ';' after expression
rtx v37; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2968:5: error: use of undeclared identifier 'v37'
rtx v37; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2975:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2975:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2981:6: error: use of undeclared identifier 'v50'
rtx *v50; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2986:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2992:6: error: use of undeclared identifier 'v61'
rtx *v61; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2994:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v64; // [rsp+1Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2995:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v65; // [rsp+20h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/integrate.c:2998:4: error: expected ';' after expression
rtx op; // [rsp+30h] [rbp-48h] BYREF 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subst_constants/src/obj/integrate.o] Error 1
